hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__unknown_function_call_on_struct.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function 'print' not found",
                span: 3:17; [35, 40],
                level: Error,
            },
        ],
        inputs: (),
    },
)
