hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__unknown_struct_annotation.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'unknown' not found",
                span: 2:10; [10, 17],
                level: Error,
            },
        ],
        inputs: (),
    },
)
